; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_framewnd.c_InitOpenFileName.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_framewnd.c_InitOpenFileName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i8*, i32, i8*, i32, i8*, i32, i32*, i32, i32 }
%struct.TYPE_8__ = type { i32, i32 }

@InitOpenFileName.Filter = internal global [1024 x i32] zeroinitializer, align 16
@hInst = common dso_local global i32 0, align 4
@IDS_FLT_REGFILES = common dso_local global i32 0, align 4
@IDS_FLT_REGFILES_FLT = common dso_local global i32 0, align 4
@IDS_FLT_HIVFILES = common dso_local global i32 0, align 4
@IDS_FLT_HIVFILES_FLT = common dso_local global i32 0, align 4
@IDS_FLT_REGEDIT4 = common dso_local global i32 0, align 4
@IDS_FLT_REGEDIT4_FLT = common dso_local global i32 0, align 4
@IDS_FLT_ALLFILES = common dso_local global i32 0, align 4
@IDS_FLT_ALLFILES_FLT = common dso_local global i32 0, align 4
@FileNameBuffer = common dso_local global i32 0, align 4
@_MAX_PATH = common dso_local global i8* null, align 8
@FileTitleBuffer = common dso_local global i32 0, align 4
@OFN_HIDEREADONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i32] [i32 114, i32 101, i32 103, i32 0], align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_7__*)* @InitOpenFileName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InitOpenFileName(i32 %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca [4 x %struct.TYPE_8__], align 16
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %4, align 8
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %7 = call i32 @memset(%struct.TYPE_7__* %6, i32 0, i32 72)
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  store i32 72, i32* %9, align 8
  %10 = load i32, i32* %3, align 4
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 9
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* @hInst, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 8
  store i32 %13, i32* %15, align 8
  %16 = load i32, i32* @IDS_FLT_REGFILES, align 4
  %17 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 0
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @IDS_FLT_REGFILES_FLT, align 4
  %20 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 0
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 16
  %22 = load i32, i32* @IDS_FLT_HIVFILES, align 4
  %23 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 1
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  %25 = load i32, i32* @IDS_FLT_HIVFILES_FLT, align 4
  %26 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 1
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  %28 = load i32, i32* @IDS_FLT_REGEDIT4, align 4
  %29 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 2
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* @IDS_FLT_REGEDIT4_FLT, align 4
  %32 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 2
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 16
  %34 = load i32, i32* @IDS_FLT_ALLFILES, align 4
  %35 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 3
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 1
  store i32 %34, i32* %36, align 4
  %37 = load i32, i32* @IDS_FLT_ALLFILES_FLT, align 4
  %38 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 3
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 0
  store i32 %37, i32* %39, align 8
  %40 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 0
  %41 = getelementptr inbounds [4 x %struct.TYPE_8__], [4 x %struct.TYPE_8__]* %5, i64 0, i64 0
  %42 = call i32 @COUNT_OF(%struct.TYPE_8__* %41)
  %43 = call i32 @BuildFilterStrings(i32* getelementptr inbounds ([1024 x i32], [1024 x i32]* @InitOpenFileName.Filter, i64 0, i64 0), %struct.TYPE_8__* %40, i32 %42)
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 7
  store i32* getelementptr inbounds ([1024 x i32], [1024 x i32]* @InitOpenFileName.Filter, i64 0, i64 0), i32** %45, align 8
  %46 = load i32, i32* @FileNameBuffer, align 4
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 6
  store i32 %46, i32* %48, align 8
  %49 = load i8*, i8** @_MAX_PATH, align 8
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 5
  store i8* %49, i8** %51, align 8
  %52 = load i32, i32* @FileTitleBuffer, align 4
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %53, i32 0, i32 4
  store i32 %52, i32* %54, align 8
  %55 = load i8*, i8** @_MAX_PATH, align 8
  %56 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 3
  store i8* %55, i8** %57, align 8
  %58 = load i32, i32* @OFN_HIDEREADONLY, align 4
  %59 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %60 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %59, i32 0, i32 2
  store i32 %58, i32* %60, align 8
  %61 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %61, i32 0, i32 1
  store i8* bitcast ([4 x i32]* @.str to i8*), i8** %62, align 8
  %63 = load i32, i32* @TRUE, align 4
  ret i32 %63
}

declare dso_local i32 @memset(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @BuildFilterStrings(i32*, %struct.TYPE_8__*, i32) #1

declare dso_local i32 @COUNT_OF(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
